--- a/package.json
+++ b/package.json
@@ -1,1 +1,17 @@
-
+{ 
+  "name": "crytid-landing",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next Start",
+    "export": "next export"
+  },
+  "de[pendencies": {
+    "next"; "13.5.6",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
+  }
+}
+    
