--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "export": "next export"
   },
   "de[pendencies": {
-    "next"; "13.5.6",
+    "next": "13.5.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   }
