--- a/package.json
+++ b/package.json
@@ -6,12 +6,19 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next Start",
-    "export": "next export"
+    "export": "next lint"
   },
-  "de[pendencies": {
+  "dependencies": {
     "next": "13.5.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+  },
+  "devDepewndencies": {
+    "esilent": "8.51.0",
+    "eslint-config-next": "13.5.6"
+},
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
     
